# cpp_testbed_skel

./: CMakeLists.txt  README.md
c/: CMakeLists.txt  testbed.c
c/examples/: binary_semaphor.c  producer_consumer.c
c/my_c_lib/: my_c_lib_header.h
c/my_c_lib/examples/: binary_semaphor.c  producer_consumer.c
cpp/: CMakeLists.txt  masterclass.md  testbed.cpp
